welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: too many arguments for method fillColumn: ()Unit
  	fillColumn(colors)
                  ^