welcome.lessons.welcome.array.basics.Array1.scala.code
def fillColumn(){
  
}

override def run() {
  var colors = new Array[Color] (getWorldHeight())
  for(i <- 0 to getWorldHeight()){
    colors(i) = getGroundColor()
    forward()
  }
  forward()
  for(i <- 1 to 6)
  	fillColumn(colors)
}